X11: Always composite toplevel windows when possible

BUG=344141
R=piman,erg
TBR=derat@chromium.org

Change-Id: I3384b4bc207239fbcab3ddd25430c2ae76143e9c
Reviewed-on: https://chromium-review.googlesource.com/854741
Reviewed-by: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Elliot Glaysher <erg@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527732}
Former-commit-id: 4b59b70d81d879f9eb616aa4688ccc03944ae314